--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,1 @@
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
-spring.datasource.url = jdbc:mysql://localhost:3306/lms_dev
-spring.datasource.username = root
-spring.jpa.show-sql = true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.profiles.active=db
